# m

./: CMakeLists.txt  README.md  backup.sh  customize.sh  module.prop  wipe.sh
.github/workflows/: build.yml
source/: config.cpp  config.h  hook.cpp  hook.h  main.cpp  zygisk.hpp
webroot/: index.html  main.js  style.css
